# svm-perfomance-evaluation

./: CMakeLists.txt  README.md  scoped_timer.cpp  scoped_timer.h  svm_perfomance_evaluation-main.cpp  test.h
datasets/: climate_model_crashes.h  climate_model_crashes.inl
datasets/generic/: line_base.h
